--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Ian Osband - Homepage</title>
+		<title>Amelia Taylor - Homepage</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -52,7 +52,7 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-                <h1><strong><a href="index.html">Stanford</a></strong> Machine Learning</h1>
+                <h1><strong><a href="index.html">Academic Quickly Transitioning to an Industry Data Scientist</a></strong> /h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
