further updating of name, etc.

--- a/index.html
+++ b/index.html
@@ -52,20 +52,20 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-                <h1><strong><a href="index.html">Academic Quickly Transitioning to an Industry Data Scientist</a></strong> /h1>
+                <h1><strong><a href="index.html">Academic Quickly Transitioning to an Industry Data Scientist</a></strong> </h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
                         <li><a href="blog.html">Blog</a></li>
-						<li><a href="docs/IanOsband_Academic.pdf">CV</a></li>
+						<li><a href="~/Insight/Resume/AmeliaTaylor.pdf">Resume</a></li>
 					</ul>
 				</nav>
 			</header>
 
 		<!-- Banner -->
 			<section id="banner">
-				<h2>Ian Osband</h2>
-				<p>Data, decisions and learning</p>
+				<h2>Amelia Taylor</h2>
+				<!-- <p>Data, decisions and learning</p> -->
 			</section>
 
 			<!-- About me -->
