added my picture

--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
 							<div class="6u 12u$(medium)">
 								<header class="major">
 									<h2>About me</h2>
-									<div class="11u"><span class="image fit"><img src="images/tie.jpg" style="max-width: 300px" alt="" /></span></div>
+									<div class="11u"><span class="image fit"><img src="professionalPhoto.JPG" style="max-width: 300px" alt="" /></span></div>
 								</header>
 							</div>
 							<div class="6u$ 12u$(medium)">
                                 <br>
 								<p>I am an <a href = "http://insightdatascience.com/">Insight Data Science Fellow </a> rapidly transitioning from life as an academic mathematician to the exciting world of Data Science applied to the world of Business. Check out my industry resume, and some of the data science work I've done. </p>
 
-                                <p>Before this great transition, I was the program lead for mathematics and statistics at <a href="http://osucascades.edu/">Oregon State University</a> and chair of the mathematics department at <a href= "https://www.coloradocollege.edu/academics/dept/mathematics/"_blank">Colorado College /a>.   </p>
+                                <p>Before this great transition, I was the program lead for mathematics and statistics at <a href="http://osucascades.edu/">Oregon State University</a> and chair of the mathematics department at <a href= "https://www.coloradocollege.edu/academics/dept/mathematics/"_blank">Colorado College </a>.   </p>
                                 <p>
                                     If you want to know what I'm thinking check out my <a href="blog.html">blog</a>.
                                 </p>
