--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 				<section id="projects" class="wrapper style2 special">
 					<div class="container">
 						<header class="major special">
-							<h2>Research</h2>
+							<h2>Projects</h2>
 							<p>Quick links and catchy taglines</p>
 						</header>
 						<div class="feature-grid">
@@ -190,21 +190,21 @@
 				</section>
 
         <!-- teaching -->
-            <section id="teaching" class="wrapper">
+            <section id="academic" class="wrapper">
                 <div class="container" style="max-width: 1000px; line-height: 140%;">
 
                     <header class="major special">
-                        <h2>Teaching</h2>
+                        <h2>Academic History</h2>
                         <p>Past courses</p>
                     </header>
 
-        <p id=""><a href="http://explorecourses.stanford.edu/search;jsessionid=eqe6sam4fpd614wv5fgcsffa2?q=MS%26E+142%3A+Introductory+Financial+Analysis&filter-coursestatus-Active=on&view=catalog&academicYear=20142015" target="_blank"><span class="image left"><img src="images/stocks.jpg" title="" alt="" style="max-width: 140px"></span></a><h4> MS&ampE 145 - Introduction to Financial analysis - lead instructor</h4><p>Finance for engineers aimed for over 75 undergraduate juniors and seniors. Everything from the time value of money to CAPM to elementary option pricing and portfolio optimization. Practical data analysis skills taught through spreadsheets.</p>
+<!---        <p id=""><a href="http://explorecourses.stanford.edu/search;jsessionid=eqe6sam4fpd614wv5fgcsffa2?q=MS%26E+142%3A+Introductory+Financial+Analysis&filter-coursestatus-Active=on&view=catalog&academicYear=20142015" target="_blank"><span class="image left"><img src="images/stocks.jpg" title="" alt="" style="max-width: 140px"></span></a><h4> MS&ampE 145 - Introduction to Financial analysis - lead instructor</h4><p>Finance for engineers aimed for over 75 undergraduate juniors and seniors. Everything from the time value of money to CAPM to elementary option pricing and portfolio optimization. Practical data analysis skills taught through spreadsheets.</p>
 
             <br>
             <br>
 
        <p id=""><a href="https://web.stanford.edu/class/msande338/" target="_blank"><span class="image left"><img src="images/robots.jpg" title="" alt="" style="max-width: 140px"></span></a><h4> MS&ampE 338 - Reinforcement learning - assistant instructor</h4><p>An advanced PhD level course aimed at graduate students looking to engage in research. I managed the class research projects and gave several lectures throughout the course.</p>
-
+---
                 </div>
             </section>
 
