commented out projects for now.

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
 								<p>I am an <a href = "http://insightdatascience.com/">Insight Data Science Fellow </a> rapidly transitioning from life as an academic mathematician to the exciting world of Data Science applied to the world of Business. Check out my industry resume, and some of the data science work I've done. </p>
 
                                 <p>Before this great transition, I was the program lead for mathematics and statistics at <a href="http://osucascades.edu/">Oregon State University</a> and chair of the mathematics department at <a href= "https://www.coloradocollege.edu/academics/dept/mathematics/"_blank">Colorado College </a>.   </p>
-                                <p>
+                              <!---  <p>
                                     If you want to know what I'm thinking check out my <a href="blog.html">blog</a>.
-                                </p>
+                                </p> -->
 							</div>
 						</div>
 					</div>
@@ -101,7 +101,7 @@
 							<p>Quick links and catchy taglines</p>
 						</header>
 						<div class="feature-grid">
-                            <div class="feature">
+<!---                            <div class="feature">
                                 <div class="image rounded">
                                     <a href="http://arxiv.org/abs/1602.04621">
                                         <img src="images/pacman.jpg" alt="" />
@@ -109,7 +109,7 @@
                                 </div>
                                 <div class="content">
                                     <header>
-                                        <h4>Deep Exploration via Bootstrapped DQN</h4>
+                                        <h4></h4>
                                         <p>In submission</p>
                                     </header>
                                     <p>Deep exploration and deep reinforcement learning. Takes the insight from efficient exploration via randomized value functions and attains state of the art results on Atari. Includes some sweet vids.</p>
@@ -184,7 +184,7 @@
                                     </header>
                                     <p>You don't need to use loose UCB-style algorithms to get regret bounds for reinforcement learning. Posterior sampling is more efficient in terms of computation and data and shares similar gaurantees. </p>
                                 </div>
-                            </div>
+                            </div> --->
 						</div>
 					</div>
 				</section>
