fixed resume link.

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-                        <li><a href="blog.html">Blog</a></li>
-						<li><a href="~/Insight/Resume/AmeliaTaylor.pdf">Resume</a></li>
+                        <!---<li><a href="blog.html">Blog</a></li> --->
+						<li><a href="AmeliaTaylor.pdf">Resume</a></li>
 					</ul>
 				</nav>
 			</header>
