--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 						<div class="feature-grid">
                                     <div class="feature">
                                 <div class="image">
-                                    <a href="https://speakerdeck.com/ameliajtaylor/">
+                                    <a href="https://speakerdeck.com/ameliajtaylor/ajt-insight-demo">
                                         <img src="insight.png" alt="" />
                                     </a>
                                 </div>
