made a resume directory and fixed index.html for this.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
                         <!---<li><a href="blog.html">Blog</a></li> --->
-						<li><a href="AmeliaTaylor.pdf">Resume</a></li>
+						<li><a href="resume/AmeliaResume.pdf">Resume</a></li>
                        <!--- <li><a href="AmeliaTaylorCV.pdf">Resume</a></li> --->
 					</ul>
 				</nav>
@@ -77,7 +77,7 @@
 							<div class="6u 12u$(medium)">
 								<header class="major">
 									<h2>About me</h2>
-									<div class="11u"><span class="image fit"><img src="professionalPhoto.JPG" style="max-width: 230px" alt="" /></span></div>
+									<div class="11u"><span class="image fit"><img src="images/professionalPhoto.JPG" style="max-width: 220px" alt="" /></span></div>
 								</header>
 							</div>
 							<div class="6u$ 12u$(medium)">
@@ -100,21 +100,22 @@
 					<div class="container">
 						<header class="major special">
 							<h2>Projects</h2>
-				<!---			<p>Quick links and catchy taglines</p> </a> --->
 						</header>
 						<div class="feature-grid">
-                                    <div class="feature">
-                                <div class="image">
-                                    <a href="https://speakerdeck.com/ameliajtaylor/ajt-insight-demo">
-                                        <img src="insight.png" alt="" />
-                                    </a>
+                            <div class="feature">
+                                <div class="center">"
+                                    <div class="image"></a>
+                                        <img src="images/insight.png" alt="" />
+                                    </div>
+                                    <div class="content">
+                                        <header>
+                                            <h4>H2OhNo!</h4>
+                                            <p>Insight Data Science</p>
+                                        </header>
+                                        <p>Slides for my Demo of my consulting project for an analytics company improving meter tampering scores. </p> <p>
+                                        <iframe allowfullscreen="true" allowtransparency="true" frameborder="0" height="611" id="talk_frame_349111" mozallowfullscreen="true" src="//speakerdeck.com/player/5d11aa75bca243eb9de0d014faf87edd" style="border:0; padding:0; margin:0; background:transparent;" webkitallowfullscreen="true" width="710"> </iframe></p>
+                                    </div>
                                 </div>
-                                <div class="content">
-                                    <header>
-                                        <h4>Insight Data Science Demo</h4>
-                                        <p>Slides</p>
-                                    </header>
-                                    <p>Consulting project for an analytics company. </p>
                                 </div>
                             </div>
 							     <div class="feature">
@@ -131,34 +132,6 @@
 									<p></p>
 								</div>
 							</div>
-					<!---		<div class="feature">
-								<div class="image rounded">
-                                    <a href="https://github.com/ameliajtaylor">
-                                    <img src="images/dog.jpg" alt="" />
-                                    </a>
-                                </div>
-								<div class="content">
-									<header>
-										<h4>Judging Judges</h4>
-										<p>Side project for a county elections office.</p>
-									</header>
-									<p></p>
-								</div>
-							</div>
-                        <div class="feature">
-                                <div class="image rounded">
-                                    <a href="http://papers.nips.cc/paper/5245-model-based-reinforcement-learning-and-the-eluder-dimension">
-                                    <img src="images/eluder.jpg" alt="" />
-                                    </a>
-                                </div>
-                                <div class="content">
-                                    <header>
-                                        <h4>Model based reinforcement learning and the eluder dimension</h4>
-                                        <p>NIPS 2014</p>
-                                    </header>
-                                    <p>
-                                </div>
-                            </div> --->
 						</div>
 					</div>
 				</section>
@@ -188,7 +161,7 @@
 						<header class="major">
 							<h2>Want more?</h2>
 							<p>Hit me up at any of the links below. </p>
-                            <p> <a href="AmeliaTaylor.pdf" target="_blank"> Here </a> is a copy of my CV. </p>
+                            <p> <a href="resume/AmeliaResume.pdf" target="_blank"> Here </a> is a copy of my resume. </p>
 						</header>
                             <ul class="actions">
 							<li><a href="#" class="button special big">Get in touch</a></li>
