aligning page, adding pet picture.

--- a/index.html
+++ b/index.html
@@ -84,10 +84,8 @@
                                 <br>
 								<p>I am an <a href = "http://insightdatascience.com/">Insight Data Science Fellow </a> rapidly transitioning from life as an academic mathematician to the exciting world of Data Science applied to the world of Business. Check out my industry resume, and some of the data science work I've done. </p>
 
-                                <p>Before this great transition, I was the program lead for mathematics and statistics at <a href="http://osucascades.edu/">Oregon State University</a> and chair of the mathematics department at <a href= "https://www.coloradocollege.edu/academics/dept/mathematics/"_blank">Colorado College </a>.   </p>
-                              <!---  <p>
-                                    If you want to know what I'm thinking check out my <a href="blog.html">blog</a>.
-                                </p> -->
+                                <p>Before this great transition, I was the program lead for mathematics and statistics at <a href="http://osucascades.edu/">Oregon State University</a> and chair of the mathematics department at <a href= "https://www.coloradocollege.edu/academics/dept/mathematics/"_blank">Colorado College </a>.   
+                                </p>
 							</div>
 						</div>
 					</div>
@@ -112,7 +110,7 @@
                                             <h4>H2OhNo!</h4>
                                             <p>Insight Data Science</p>
                                         </header>
-                                        <p>Slides for my Demo of my consulting project for an analytics company improving meter tampering scores. </p> <p>
+                                        <p>Demo for my consulting project with an analytics company improving meter tampering scores. </p> <p>
                                         <iframe allowfullscreen="true" allowtransparency="true" frameborder="0" height="611" id="talk_frame_349111" mozallowfullscreen="true" src="//speakerdeck.com/player/5d11aa75bca243eb9de0d014faf87edd" style="border:0; padding:0; margin:0; background:transparent;" webkitallowfullscreen="true" width="710"> </iframe></p>
                                     </div>
                                 </div>
