added judging project.

--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
                                 <br>
 								<p>I am an <a href = "http://insightdatascience.com/">Insight Data Science Fellow </a> rapidly transitioning from life as an academic mathematician to the exciting world of Data Science applied to the world of Business. Check out my industry resume, and some of the data science work I've done. </p>
 
-                                <p>Before this great transition, I was the program lead for mathematics and statistics at <a href="http://osucascades.edu/">Oregon State University</a> and chair of the mathematics department at <a href= "https://www.coloradocollege.edu/academics/dept/mathematics/"_blank">Colorado College </a>.   
+                                <p>Before this great transition, I was the program lead for mathematics and statistics at <a href="http://osucascades.edu/">Oregon State University</a> and chair of the mathematics department at 
+                                    <a href= "https://www.coloradocollege.edu/academics/dept/mathematics/">Colorado College </a>.   
                                 </p>
 							</div>
 						</div>
@@ -92,34 +93,30 @@
 				</section>
 
 
-
-			<!-- Projects -->
-				<section id="projects" class="wrapper style2 special">
-					<div class="container">
-						<header class="major special">
+	<section id="projects" class="wrapper style2 special">
+				<header class="major special">
 							<h2>Projects</h2>
 						</header>
-						<div class="feature-grid">
-                            <div class="feature">
-                                <div class="center">"
-                                    <div class="image"></a>
-                                        <img src="images/insight.png" alt="" />
-                                    </div>
-                                    <div class="content">
-                                        <header>
-                                            <h4>H2OhNo!</h4>
-                                            <p>Insight Data Science</p>
-                                        </header>
-                                        <p>Demo for my consulting project with an analytics company improving meter tampering scores. </p> <p>
-                                        <iframe allowfullscreen="true" allowtransparency="true" frameborder="0" height="611" id="talk_frame_349111" mozallowfullscreen="true" src="//speakerdeck.com/player/5d11aa75bca243eb9de0d014faf87edd" style="border:0; padding:0; margin:0; background:transparent;" webkitallowfullscreen="true" width="710"> </iframe></p>
-                                    </div>
+            <div class="feature">
+                                <div class="image"></a>
+                                    <img src="images/insight.png" style="max-width: 150px" alt="" />
                                 </div>
-                                </div>
-                            </div>
+                                <div class="content">
+                                    <header>
+                                         <h4>H2OhNo! A consulting project for Valor Water Analytics</h4>
+                                     </header>
+                                        <iframe allowfullscreen="true" allowtransparency="true" frameborder="0" height="611" id="talk_frame_349111" mozallowfullscreen="true" src="//speakerdeck.com/player/5d11aa75bca243eb9de0d014faf87edd" style="border:0; padding:0; margin:0; background:transparent;" webkitallowfullscreen="true" width="710"> </iframe>
+        </div>
+        <div class="feature">
+            <div class="content">
+                <br>
+                <br>
+            </div>
+        </div>
 							     <div class="feature">
 								<div class="image rounded">
                                     <a href="https://github.com/ameliajtaylor">
-                                        <img src="images/deep.jpg" alt="" />
+                                        <img src="images/animal-dog-pet-eyes.jpg" style="max-width: 150px" alt="" />
                                     </a>
                                 </div>
 								<div class="content">
@@ -129,12 +126,27 @@
 									</header>
 									<p></p>
 								</div>
-							</div>
-						</div>
-					</div>
-				</section>
+                                     
+                                      <div class="feature">
+								<div class="image rounded">
+                                    <a href="https://github.com/ameliajtaylor">
+                                        <a href="http://worldartsme.com/contest-judge-clipart.html" title="Clipart from WorldArtsMe"><img title="Contest Judge Clipart" width="150" src="http://worldartsme.com/images/contest-judge-clipart-1.jpg"/> </a>
+                                        <a href="http://worldartsme.com/">WorldArtsMe</a>
+                                    </a>
+                                </div>
+								<div class="content">
+									<header>
+										<h4>Auditing Signature Judges </h4>
+										<p>Side project for a Colorado county elections office.</p>
+									</header>
+									<p></p>
+								</div>
+                                     </div>
+        </div>
+        </section>
 
-        <!-- teaching -->
+        <!---
+        <!-- research -->
             <section id="academic" class="wrapper">
                 <div class="container" style="max-width: 1000px; line-height: 140%;">
 
@@ -142,17 +154,24 @@
                         <h2>Academic Research </h2>
                     </header>
 
-<!---        <p id=""><a href="http://explorecourses.stanford.edu/search;jsessionid=eqe6sam4fpd614wv5fgcsffa2?q=MS%26E+142%3A+Introductory+Financial+Analysis&filter-coursestatus-Active=on&view=catalog&academicYear=20142015" target="_blank"><span class="image left"><img src="images/stocks.jpg" title="" alt="" style="max-width: 140px"></span></a><h4> MS&ampE 145 - Introduction to Financial analysis - lead instructor</h4><p>Finance for engineers aimed for over 75 undergraduate juniors and seniors. Everything from the time value of money to CAPM to elementary option pricing and portfolio optimization. Practical data analysis skills taught through spreadsheets.</p>
-
-            <br>
-            <br>
-
-       <p id=""><a href="https://web.stanford.edu/class/msande338/" target="_blank"><span class="image left"><img src="images/robots.jpg" title="" alt="" style="max-width: 140px"></span></a><h4> MS&ampE 338 - Reinforcement learning - assistant instructor</h4><p>An advanced PhD level course aimed at graduate students looking to engage in research. I managed the class research projects and gave several lectures throughout the course.</p>
----
+                    <div class="feature">
+								<div class="image rounded">
+                                    <a href="https://github.com/ameliajtaylor">
+                                        <img src="images/animal-dog-pet-eyes.jpg" style="max-width: 150px" alt="" />
+                                    </a>
+                                </div>
+								<div class="content">
+									<header>
+										<h4></h4>
+										<p></p>
+									</header>
+									<p></p>
+								</div>
+                    </div>
                 </div>
-            </section>
+        </section>
 
-
+--->
 			<!-- Four -->
 				<section id="resume" class="wrapper style3 special">
 					<div class="container">
