text for research.

--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
                                 </div>
 								<div class="content">
 									<header>
-										<h4></h4>
-										<p></p>
+										<h4>Developing a Statistically Powerful Measure for Phylogenetic Tree Inverence using Phylogenetic and Markov Invariants</h4>
+										<p>The link points to the simulation code for testing the measures in our paper.  A link to the arXiv will be here soon. </p>
 									</header>
 									<p></p>
 								</div>
