fixed judge graphic.

--- a/index.html
+++ b/index.html
@@ -130,9 +130,7 @@
                                       <div class="feature">
 								<div class="image rounded">
                                     <a href="https://github.com/ameliajtaylor/colorado-elections">
-                                        <a href="http://worldartsme.com/contest-judge-clipart.html" title="Clipart from WorldArtsMe"><img title="Contest Judge Clipart" width="150" src="http://worldartsme.com/images/contest-judge-clipart-1.jpg"/> </a>
-                                        <a href="http://worldartsme.com/">WorldArtsMe</a>
-                                    </a>
+                                        <img src="images/female-judge-standing-22A.jpg" style = "max-width:150px" alt="" /> </a>
                                 </div>
 								<div class="content">
 									<header>
