--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                       <div class="feature">
 								<div class="image rounded">
                                     <a href="https://github.com/ameliajtaylor/colorado-elections">
-                                        <img src="images/female-judge-standing-22A.jpg" style = "max-width:150px" alt="" /> </a>
+                                        <img src="images/female-judge-standing-22A.jpg" style = "max-width:120px" alt="" /> </a>
                                 </div>
 								<div class="content">
 									<header>
@@ -154,16 +154,17 @@
                     <div class="feature">
 								<div class="image rounded">
                                     <a href="https://github.com/ameliajtaylor/representation-theory-phylogenetics">
-                                        <img src="images/fgPrimateTree.png" style="max-width: 150px" alt="" />
+                                        <img src="images/fgPrimateTree.png" style="max-width: 120px" alt="" />
                                     </a>
-                                </div>
+                            
 								<div class="content">
 									<header>
-										<h4>Developing a Statistically Powerful Measure for Phylogenetic Tree Inverence using Phylogenetic and Markov Invariants</h4>
+										<h4>Developing a Statistically Powerful Measure for Phylogenetic Tree Inference using Phylogenetic and Markov Invariants</h4>
 										<p>The link points to the simulation code for testing the measures in our paper.  A link to the arXiv will be here soon. </p>
 									</header>
 									<p></p>
 								</div>
+                        </div>
                     </div>
                 </div>
         <!---        
