--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
 							</div>
 							<div class="6u$ 12u$(medium)">
                                 <br>
-								<p> I am a Data Scientist at <a href = "http://https://www.zymergen.com/"> Zymergen, Inc. </a> after having a full career as a mathematics professor.  At Zymergen, my work is part of 3 patents, and is focused on simultaneously increasing the information we get (using statistical rigor and machine learning best practices) and reducing the time it takes us to get that information.  Check out my industry resume, and some of the data science work I've done. </p>
+								<p> I am a Data Scientist at <a href = "https://www.zymergen.com/"> Zymergen, Inc. </a> after having a full career as a mathematics professor.  At Zymergen, my work is part of 3 patents, and is focused on simultaneously increasing the information we get (using statistical rigor and machine learning best practices) and reducing the time it takes us to get that information.  Check out my industry resume, and some of the data science work I've done. </p>
 
-                                <p>Before this great transition, I was the program lead for mathematics and statistics at <a href="http://osucascades.edu/">Oregon State University</a> and chair of the mathematics department at 
+                                <p> <a href = "https://www.insightdatascience.com//">Insight Data Science <a> fueled my transition from academia to industry.  Most recently, I was the program lead for mathematics and statistics at <a href="http://osucascades.edu/">Oregon State University</a> and chair of the mathematics department at 
                                     <a href= "https://www.coloradocollege.edu/academics/dept/mathematics/">Colorado College </a>.   
                                 </p>
 							</div>
